--- a/cv.html
+++ b/cv.html
@@ -9,17 +9,20 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
+    <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient" style="background: linear-gradient(rgb(99,99,99) 0%, rgb(33,37,41) 100%);padding: 21px;margin: 0px;filter: sepia(0%);">
-        <div class="container"><a class="navbar-brand logo" href="#">Janus Quek</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="projects-grid-cards.html">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="cv.html">Resume</a></li>
-                    <li class="nav-item"><a class="nav-link" href="hire-me.html">Hire me</a></li>
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top portfolio-navbar gradient" style="padding: 21px;margin: 0px;filter: blur(0px) brightness(100%) contrast(100%) sepia(0%);background: var(--white);opacity: 1;">
+        <div class="container"><a class="navbar-brand logo" href="#" style="color: var(--gray-dark);">Janus Quek</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarNav" style="color: rgb(0,0,0);">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="../index.html" style="color: var(--gray-dark);">Home</a></li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#" style="color: var(--gray-dark);">Projects</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="#">Howl: A Tale of Wolves</a><a class="dropdown-item" href="#">Spellthief</a><a class="dropdown-item" href="../trojan/">Trojan</a><a class="dropdown-item" href="#">Monetary Mortality</a><a class="dropdown-item" href="#">MindWorks!</a></div>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="../cv.html" style="color: var(--gray-dark);">Resume</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../hire-me.html" style="color: var(--gray-dark);">Contact me</a></li>
                 </ul>
             </div>
         </div>
