--- a/UXa/forge-engine/index.html
+++ b/UXa/forge-engine/index.html
@@ -5,28 +5,30 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Blog Post - Brand</title>
-    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css?h=c8c77deac6e6a1a471da4f52c5b0e03f">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
-    <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="../assets/css/2-columns-media-image-video-carousel-map.css">
+    <link rel="stylesheet" href="../../assets/fonts/font-awesome.min.css?h=0d6a07403b8fe83ff73a9dcbd3ef7c0e">
+    <link rel="stylesheet" href="../../assets/css/2-columns-media-image-video-carousel-map.css?h=a4318cd0aa8e0a7ab71867672e4c52e1">
 </head>
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="index.html">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+        <div class="container"><a class="navbar-brand" href="ux/index.html">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="nav navbar-nav ml-auto">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">PROJECTS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">RESUME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About ME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="post.html">CONTACT ME</a></li>
+                    <li class="nav-item dropdown show"><a class="dropdown-toggle nav-link" aria-expanded="true" data-toggle="dropdown" href="#">PROJECTS</a>
+                        <div class="dropdown-menu show"><a class="dropdown-item" href="#">Beta Engine</a><a class="dropdown-item" href="forge-engine">Forge Engine</a><a class="dropdown-item" href="#">Others</a></div>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="resume.pdf">RESUME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about-me">About ME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact-me">CONTACT ME</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background-image:url('../assets/img/post-bg.jpg');">
+    <header class="masthead" style="background-image:url('../../assets/img/post-bg.jpg?h=9b3eae5bf913af77d61c0390cba13bf5');">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
@@ -56,7 +58,7 @@
                     </blockquote>
                     <p>Spaceflights cannot be stopped. This is not the work of any one man or even a group of men. It is a historical process which mankind is carrying out in accordance with the natural laws of human development.</p>
                     <h2 class="section-heading">Reaching for the Stars</h2>
-                    <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a man.</p><a href="#"><img class="img-fluid" src="../assets/img/post-sample-image.jpg"></a><span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
+                    <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a man.</p><a href="#"><img class="img-fluid" src="../../assets/img/post-sample-image.jpg?h=a3cddd21d9e594fe69a0fc790b5ca3d0"></a><span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
                     <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone before.</p>
                     <p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a fundamental truth to our nature, Man must explore, and this is exploration at its greatest.</p>
                     <p><span>Placeholder text by&nbsp;</span><a href="http://spaceipsum.com">Space Ipsum</a><span>&nbsp;Photographs by&nbsp;</span><a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>.</p>
@@ -77,10 +79,10 @@
             </div>
         </div>
     </footer>
-    <script src="../assets/js/jquery.min.js"></script>
-    <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../assets/js/2-columns-media-image-video-carousel-map.js"></script>
-    <script src="../assets/js/clean-blog.js"></script>
+    <script src="../../assets/js/jquery.min.js?h=89312d34339dcd686309fe284b3f226f"></script>
+    <script src="../../assets/bootstrap/js/bootstrap.min.js?h=ba42258394f86cd7822f0e850e2d60b1"></script>
+    <script src="../../assets/js/2-columns-media-image-video-carousel-map.js?h=bc336573c29dd6cef9a547d30ca17cdf"></script>
+    <script src="../../assets/js/clean-blog.js?h=5c5da44b414001c67a91a5784fe4f011"></script>
 </body>
 
 </html>
