--- a/UXa/contact-me/index.html
+++ b/UXa/contact-me/index.html
@@ -5,28 +5,30 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Contact us - Brand</title>
-    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css?h=c8c77deac6e6a1a471da4f52c5b0e03f">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
-    <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="../assets/css/2-columns-media-image-video-carousel-map.css">
+    <link rel="stylesheet" href="../../assets/fonts/font-awesome.min.css?h=0d6a07403b8fe83ff73a9dcbd3ef7c0e">
+    <link rel="stylesheet" href="../../assets/css/2-columns-media-image-video-carousel-map.css?h=a4318cd0aa8e0a7ab71867672e4c52e1">
 </head>
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="index.html">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+        <div class="container"><a class="navbar-brand" href="ux/index.html">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="nav navbar-nav ml-auto">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">PROJECTS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">RESUME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About ME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="post.html">CONTACT ME</a></li>
+                    <li class="nav-item dropdown show"><a class="dropdown-toggle nav-link" aria-expanded="true" data-toggle="dropdown" href="#">PROJECTS</a>
+                        <div class="dropdown-menu show"><a class="dropdown-item" href="#">Beta Engine</a><a class="dropdown-item" href="forge-engine">Forge Engine</a><a class="dropdown-item" href="#">Others</a></div>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="resume.pdf">RESUME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about-me">About ME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact-me">CONTACT ME</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background-image:url('../assets/img/contact-bg.jpg');">
+    <header class="masthead" style="background-image:url('../../assets/img/contact-bg.jpg?h=1683d68fadc4673ed0357866ae18fbab');">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
@@ -75,10 +77,10 @@
             </div>
         </div>
     </footer>
-    <script src="../assets/js/jquery.min.js"></script>
-    <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../assets/js/2-columns-media-image-video-carousel-map.js"></script>
-    <script src="../assets/js/clean-blog.js"></script>
+    <script src="../../assets/js/jquery.min.js?h=89312d34339dcd686309fe284b3f226f"></script>
+    <script src="../../assets/bootstrap/js/bootstrap.min.js?h=ba42258394f86cd7822f0e850e2d60b1"></script>
+    <script src="../../assets/js/2-columns-media-image-video-carousel-map.js?h=bc336573c29dd6cef9a547d30ca17cdf"></script>
+    <script src="../../assets/js/clean-blog.js?h=5c5da44b414001c67a91a5784fe4f011"></script>
 </body>
 
 </html>
