--- a/UXa/index.html
+++ b/UXa/index.html
@@ -5,28 +5,30 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Brand</title>
-    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css?h=c8c77deac6e6a1a471da4f52c5b0e03f">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
-    <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="../assets/css/2-columns-media-image-video-carousel-map.css">
+    <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css?h=0d6a07403b8fe83ff73a9dcbd3ef7c0e">
+    <link rel="stylesheet" href="../assets/css/2-columns-media-image-video-carousel-map.css?h=a4318cd0aa8e0a7ab71867672e4c52e1">
 </head>
 
 <body style="background: rgb(0,0,0);">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="index.html">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+        <div class="container"><a class="navbar-brand" href="ux/index.html">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="nav navbar-nav ml-auto">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">PROJECTS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">RESUME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About ME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="post.html">CONTACT ME</a></li>
+                    <li class="nav-item dropdown show"><a class="dropdown-toggle nav-link" aria-expanded="true" data-toggle="dropdown" href="#">PROJECTS</a>
+                        <div class="dropdown-menu show"><a class="dropdown-item" href="#">Beta Engine</a><a class="dropdown-item" href="forge-engine">Forge Engine</a><a class="dropdown-item" href="#">Others</a></div>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="resume.pdf">RESUME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about-me">About ME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact-me">CONTACT ME</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background: url(&quot;../assets/img/laptop.jpg&quot;) bottom / cover;">
+    <header class="masthead" style="background: url(&quot;../assets/img/laptop.jpg?h=683cd8a5377d56bab71ac174f6526c3e&quot;) bottom / cover;">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
@@ -68,9 +70,9 @@
             <div class="row row-media" style="border: 5px solid rgb(255,255,255) ;">
                 <div class="col-md-6 column-media"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/LMlCN6_vUvs?autoplay=1&amp;mute=1" width="560" height="315" style="height: 555;border-right-style: solid;"></iframe></div>
                 <div class="col-md-6 text-center column-text" style="border-left: 5px solid rgb(255,255,255) ;">
-                    <h2 class="text-left" style="color: rgb(255,255,255);">Unity Editor Scripts</h2>
-                    <p class="text-left" style="color: rgb(255,255,255);">A commercial game engine used widely for game development.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);">I created various scripts that improved the development workflow for my teammates and I such as a card builder and camera sequencer.</p><button class="btn btn-primary" type="button"><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
+                    <h2 class="text-left" style="color: rgb(255,255,255);">Others</h2>
+                    <p class="text-left" style="color: rgb(255,255,255);">A bunch of other plug and play APIs such as Unity helper scripts and C++ containers.</p>
+                    <p class="text-left" style="color: rgb(255,255,255);">Some of these include a card builder and a lockless hashmap.</p><button class="btn btn-primary" type="button"><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
                 </div>
             </div>
         </div>
@@ -88,10 +90,10 @@
             </div>
         </div>
     </footer>
-    <script src="../assets/js/jquery.min.js"></script>
-    <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../assets/js/2-columns-media-image-video-carousel-map.js"></script>
-    <script src="../assets/js/clean-blog.js"></script>
+    <script src="../assets/js/jquery.min.js?h=89312d34339dcd686309fe284b3f226f"></script>
+    <script src="../assets/bootstrap/js/bootstrap.min.js?h=ba42258394f86cd7822f0e850e2d60b1"></script>
+    <script src="../assets/js/2-columns-media-image-video-carousel-map.js?h=bc336573c29dd6cef9a547d30ca17cdf"></script>
+    <script src="../assets/js/clean-blog.js?h=5c5da44b414001c67a91a5784fe4f011"></script>
 </body>
 
 </html>
