--- a/ux/about-me/index.html
+++ b/ux/about-me/index.html
@@ -14,16 +14,16 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="ux/index.html">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+        <div class="container"><a class="navbar-brand" href="/ux/index.html">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item dropdown show"><a class="dropdown-toggle nav-link" aria-expanded="true" data-toggle="dropdown" href="#">PROJECTS</a>
-                        <div class="dropdown-menu show"><a class="dropdown-item" href="#">Beta Engine</a><a class="dropdown-item" href="forge-engine">Forge Engine</a><a class="dropdown-item" href="#">Others</a></div>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#">PROJECTS</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="#">Beta Engine</a><a class="dropdown-item" href="/ux/forge-engine">Forge Engine</a><a class="dropdown-item" href="#">Others</a></div>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="resume.pdf">RESUME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about-me">About ME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact-me">CONTACT ME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/ux/resume.pdf">RESUME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/ux/about-me">About ME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/ux/contact-me">CONTACT ME</a></li>
                 </ul>
             </div>
         </div>
