--- a/ux/contact-me/index.html
+++ b/ux/contact-me/index.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" href="../../assets/css/2-columns-media-image-video-carousel-map.css?h=a4318cd0aa8e0a7ab71867672e4c52e1">
 </head>
 
-<body>
+<body style="background: rgb(0,0,0);color: rgb(255,255,255);">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="/ux/index.html">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+        <div class="container"><a class="navbar-brand" href="/ux">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/ux">Home</a></li>
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#">PROJECTS</a>
                         <div class="dropdown-menu"><a class="dropdown-item" href="#">Beta Engine</a><a class="dropdown-item" href="/ux/forge-engine">Forge Engine</a><a class="dropdown-item" href="#">Others</a></div>
                     </li>
@@ -34,7 +34,7 @@
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto">
                     <div class="site-heading">
-                        <h1>Contact Me</h1><span class="subheading">Have questions? I have answers.</span>
+                        <h1>Contact Me</h1><span class="subheading">Have questions? I have answers</span>
                     </div>
                 </div>
             </div>
@@ -69,10 +69,10 @@
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto">
                     <ul class="list-inline text-center">
-                        <li class="list-inline-item"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><a href="https://www.linkedin.com/in/janus-quek/"><i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></a></span></li>
-                        <li class="list-inline-item"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><a href="https://github.com/Viverea"><i class="fa fa-github fa-stack-1x fa-inverse"></i></a></span></li>
+                        <li class="list-inline-item"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: rgb(33,37,41);"></i><a href="https://www.linkedin.com/in/janus-quek/"><i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></a></span></li>
+                        <li class="list-inline-item"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: rgb(33, 37, 41);"></i><a href="https://github.com/Viverea"><i class="fa fa-github fa-stack-1x fa-inverse"></i></a></span></li>
                     </ul>
-                    <p class="text-muted copyright">Copyright&nbsp;©&nbsp;Brand 2021</p>
+                    <p class="text-muted copyright">Copyright&nbsp;©&nbsp;Janus 2021</p>
                 </div>
             </div>
         </div>
