trojan landing page

--- a/ux/index.html
+++ b/ux/index.html
@@ -5,11 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Brand</title>
-    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css?h=c8c77deac6e6a1a471da4f52c5b0e03f">
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
-    <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css?h=0d6a07403b8fe83ff73a9dcbd3ef7c0e">
-    <link rel="stylesheet" href="../assets/css/2-columns-media-image-video-carousel-map.css?h=a4318cd0aa8e0a7ab71867672e4c52e1">
+    <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="../assets/css/2-columns-media-image-video-carousel-map.css">
+    <link rel="stylesheet" href="../assets/css/Bold-BS4-Image-Caption-Hover-Effect-3.css">
 </head>
 
 <body style="background: rgb(0,0,0);">
@@ -19,7 +20,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="/ux">Home</a></li>
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#">PROJECTS</a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#">Beta Engine</a><a class="dropdown-item" href="/ux/forge-engine">Forge Engine</a><a class="dropdown-item" href="#">Others</a></div>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="#">Beta Engine</a><a class="dropdown-item" href="/ux/forge-engine">Forge Engine</a><a class="dropdown-item" href="#">Others</a><a class="dropdown-item" href="/ux/trojan">Trojan</a></div>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="/ux/resume.pdf">RESUME</a></li>
                     <li class="nav-item"><a class="nav-link" href="/ux/about-me">About ME</a></li>
@@ -28,13 +29,13 @@
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background: url(&quot;../assets/img/laptop.jpg?h=683cd8a5377d56bab71ac174f6526c3e&quot;) bottom / cover;">
+    <header class="masthead" style="background: url(&quot;../assets/img/laptop.jpg&quot;) bottom / cover;">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto">
                     <div class="site-heading">
-                        <h1>I BUILD TOOLS</h1><span class="subheading">Janus Quek, API and interface developer</span>
+                        <h1>I BUILD TOOLS</h1><span class="subheading">Janus Quek, API developer</span>
                     </div>
                 </div>
             </div>
@@ -48,7 +49,8 @@
                 <div class="col-md-6 text-center column-text" style="border-left: 5px solid rgb(255,255,255) ;">
                     <h2 class="text-left" style="color: rgb(255,255,255);">Beta Engine</h2>
                     <p class="text-left" style="color: rgb(255,255,255);">An engine made for a Year 1 game project.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);">The editor's interface and various functionalities are focused on building the game rapidly.<br><br>I developed some non-typical features here such as a robust animation editor, prefab tiler, and a dialogue editor.<br></p><button class="btn btn-primary" type="button"><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
+                    <p class="text-left" style="color: rgb(255,255,255);">The editor's interface and various functionalities are focused on building the game rapidly.<br><br>I developed some non-typical features here such as a robust animation editor, prefab tiler, and a dialogue editor.<br></p>
+                    <p class="text-left" style="color: rgb(255,255,255);">This project does not have a landing page yet.</p><button class="btn btn-secondary" type="button"><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
                 </div>
             </div>
         </div>
@@ -60,7 +62,8 @@
                 <div class="col-md-6 text-center column-text" style="border-left: 5px solid rgb(255,255,255) ;">
                     <h2 class="text-left" style="color: rgb(255,255,255);">Forge Engine</h2>
                     <p class="text-left" style="color: rgb(255,255,255);">An engine made for a Year 2 &amp; 3 game project.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);">The editor's interface and various functionalities are focused on future-proofing and extendibility.<br><br>I implemented many features with an API for other users such as C# scripting integration, flexible file I/O, and prefab technology.</p><button class="btn btn-primary" type="button"><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
+                    <p class="text-left" style="color: rgb(255,255,255);">The editor's interface and various functionalities are focused on future-proofing and extendibility.<br><br>I implemented many features with an API for other users such as C# scripting integration, flexible file I/O, and prefab technology.</p>
+                    <p class="text-left" style="color: rgb(255,255,255);">This project is still WIP as of Milestone 1.</p><button class="btn btn-primary" type="button"><a href="/ux/forge-engine" style="color: rgb(255,255,255);">SEE MORE</a></button>
                 </div>
             </div>
         </div>
@@ -72,7 +75,21 @@
                 <div class="col-md-6 text-center column-text" style="border-left: 5px solid rgb(255,255,255) ;">
                     <h2 class="text-left" style="color: rgb(255,255,255);">Others</h2>
                     <p class="text-left" style="color: rgb(255,255,255);">A bunch of other plug and play APIs such as Unity helper scripts and C++ containers.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);">Some of these include a card builder and a lockless hashmap.</p><button class="btn btn-primary" type="button"><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
+                    <p class="text-left" style="color: rgb(255,255,255);">Some of these include a card builder and a lockless hashmap.</p>
+                    <p class="text-left" style="color: rgb(255,255,255);">This project does not have a landing page yet.</p><button class="btn btn-secondary" type="button"><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row row-media" style="border: 5px solid rgb(255,255,255) ;">
+                <div class="col-md-6 column-media"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/LMlCN6_vUvs?autoplay=1&amp;mute=1" width="560" height="315" style="height: 555;border-right-style: solid;"></iframe></div>
+                <div class="col-md-6 text-center column-text" style="border-left: 5px solid rgb(255,255,255) ;">
+                    <h2 class="text-left" style="color: rgb(255,255,255);">Trojan</h2>
+                    <p class="text-left" style="color: rgb(255,255,255);">A game made in Unity for a tertiary year project.</p>
+                    <p class="text-left" style="color: rgb(255,255,255);">Trojan is a rail-shooter game, where an anti-virus program has to rid the PC of viruses.</p>
+                    <p class="text-left" style="color: rgb(255,255,255);">This project is what will be used to showcase layout and content for Milestone 1.</p><button class="btn btn-primary" type="button"><a href="/ux/trojan" style="color: rgb(255,255,255);">SEE MORE</a></button>
                 </div>
             </div>
         </div>
@@ -90,10 +107,10 @@
             </div>
         </div>
     </footer>
-    <script src="../assets/js/jquery.min.js?h=89312d34339dcd686309fe284b3f226f"></script>
-    <script src="../assets/bootstrap/js/bootstrap.min.js?h=ba42258394f86cd7822f0e850e2d60b1"></script>
-    <script src="../assets/js/2-columns-media-image-video-carousel-map.js?h=bc336573c29dd6cef9a547d30ca17cdf"></script>
-    <script src="../assets/js/clean-blog.js?h=5c5da44b414001c67a91a5784fe4f011"></script>
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../assets/js/2-columns-media-image-video-carousel-map.js"></script>
+    <script src="../assets/js/clean-blog.js"></script>
 </body>
 
 </html>
