--- a/ux/forge-engine/index.html
+++ b/ux/forge-engine/index.html
@@ -5,11 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Blog Post - Brand</title>
-    <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css?h=c8c77deac6e6a1a471da4f52c5b0e03f">
+    <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
-    <link rel="stylesheet" href="../../assets/fonts/font-awesome.min.css?h=0d6a07403b8fe83ff73a9dcbd3ef7c0e">
-    <link rel="stylesheet" href="../../assets/css/2-columns-media-image-video-carousel-map.css?h=a4318cd0aa8e0a7ab71867672e4c52e1">
+    <link rel="stylesheet" href="../../assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="../../assets/css/2-columns-media-image-video-carousel-map.css">
+    <link rel="stylesheet" href="../../assets/css/Bold-BS4-Image-Caption-Hover-Effect-3.css">
 </head>
 
 <body style="background: rgb(0,0,0);color: rgb(255,255,255);">
@@ -19,7 +20,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="/ux">Home</a></li>
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#">PROJECTS</a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#">Beta Engine</a><a class="dropdown-item" href="/ux/forge-engine">Forge Engine</a><a class="dropdown-item" href="#">Others</a></div>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="#">Beta Engine</a><a class="dropdown-item" href="/ux/forge-engine">Forge Engine</a><a class="dropdown-item" href="#">Others</a><a class="dropdown-item" href="/ux/trojan">Trojan</a></div>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="/ux/resume.pdf">RESUME</a></li>
                     <li class="nav-item"><a class="nav-link" href="/ux/about-me">About ME</a></li>
@@ -28,7 +29,7 @@
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background: url(&quot;../../assets/img/forge-engine-banner.png?h=4ad2a70243919297b216c14f52fbcc0f&quot;) top left / cover;">
+    <header class="masthead" style="background: url(&quot;../../assets/img/forge-engine-banner.png&quot;) top left / cover;">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
@@ -46,21 +47,13 @@
                 <div class="col-md-10 col-lg-8 mx-auto">
                     <p>Forge Engine is a game engine created to develop a Year 2 and Year 3 game project.</p>
                     <p>It is also the game engine that came after Beta Engine, so I could take the opportunity to improve on what features I had implemented back then.</p>
-                    <p>What was most significant about the lunar voyage was not that man set foot on the Moon but that they set eye on the earth.</p>
-                    <p>A Chinese tale tells of some men sent to harm a young girl who, upon seeing her beauty, become her protectors rather than her violators. That's how I felt seeing the Earth for the first time. I could not help but love and cherish her.</p>
-                    <p>For those who have seen the Earth from space, and for the hundreds and perhaps thousands more who will, the experience most certainly changes your perspective. The things that we share in our world are far more valuable than those which divide us.</p>
+                    <p>WIP</p>
                     <h2 class="section-heading">C# Scripting API &amp; Integration</h2>
-                    <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.</p>
-                    <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.</p>
-                    <p>Spaceflights cannot be stopped. This is not the work of any one man or even a group of men. It is a historical process which mankind is carrying out in accordance with the natural laws of human development.</p>
+                    <p>WIP</p>
                     <h2 class="section-heading">Prefab Interface</h2>
-                    <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a man.</p>
-                    <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone before.</p>
-                    <p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a fundamental truth to our nature, Man must explore, and this is exploration at its greatest.</p>
+                    <p>WIP</p>
                     <h2 class="section-heading">File I/O API</h2>
-                    <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a man.</p>
-                    <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone before.</p>
-                    <p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a fundamental truth to our nature, Man must explore, and this is exploration at its greatest.</p>
+                    <p>WIP</p>
                 </div>
             </div>
         </div>
@@ -78,10 +71,10 @@
             </div>
         </div>
     </footer>
-    <script src="../../assets/js/jquery.min.js?h=89312d34339dcd686309fe284b3f226f"></script>
-    <script src="../../assets/bootstrap/js/bootstrap.min.js?h=ba42258394f86cd7822f0e850e2d60b1"></script>
-    <script src="../../assets/js/2-columns-media-image-video-carousel-map.js?h=bc336573c29dd6cef9a547d30ca17cdf"></script>
-    <script src="../../assets/js/clean-blog.js?h=5c5da44b414001c67a91a5784fe4f011"></script>
+    <script src="../../assets/js/jquery.min.js"></script>
+    <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../../assets/js/2-columns-media-image-video-carousel-map.js"></script>
+    <script src="../../assets/js/clean-blog.js"></script>
 </body>
 
 </html>
