Forge roughly done

--- a/ux/trojan/index.html
+++ b/ux/trojan/index.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Trojan - Janus</title>
-    <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css?h=9e2f2f7964efe8968a80b0bf55661c42">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
-    <link rel="stylesheet" href="../../assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="../../assets/css/2-columns-media-image-video-carousel-map.css">
-    <link rel="stylesheet" href="../../assets/css/Bold-BS4-Image-Caption-Hover-Effect-3.css">
+    <link rel="stylesheet" href="../../assets/fonts/font-awesome.min.css?h=320bd0471c3e8d6b9dd55c98e185506c">
+    <link rel="stylesheet" href="../../assets/css/2-columns-media-image-video-carousel-map.css?h=a4318cd0aa8e0a7ab71867672e4c52e1">
+    <link rel="stylesheet" href="../../assets/css/Bold-BS4-Image-Caption-Hover-Effect-3.css?h=1c5852532269f7f368b453aa7cb1e1ac">
+    <link rel="stylesheet" href="../../assets/css/Video-Responsive.css?h=6b256dd00c3de05273474840195f316a">
 </head>
 
 <body style="background: rgb(0,0,0);color: rgb(255,255,255);">
@@ -29,7 +30,7 @@
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background: url(&quot;../../assets/img/GamePoster.png&quot;) center / cover;">
+    <header class="masthead" style="background: url(&quot;../../assets/img/GamePoster.png?h=a9b4e99586ae54b67c0699427e669761&quot;) center / cover;">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
@@ -48,7 +49,7 @@
                     <p><strong>Trojan </strong>is a 3D&nbsp;rail-shooter game developed with Unity in 2016, for my final year project during my tertiary education.</p>
                     <p>In&nbsp;<strong>Trojan,&nbsp;</strong>the player takes on the role of an anti-virus software. Its mission is to clear the computer of all the viruses that are in it. The viruses are able to fight back, but the anti-virus software upgrades itself as it progresses with new abilities that will help it achieve its mission.<br></p>
                     <h2 class="section-heading">Strong Player Feedback</h2>
-                    <div class="hover hover-3 text-white rounded"><img alt="image" src="../../assets/img/trojan-1.gif">
+                    <div class="hover hover-3 text-white rounded"><img alt="image" src="../../assets/img/trojan-1.gif?h=871e307038c22baa78ef4b2d29f77c80">
                         <div class="hover-overlay"></div>
                         <div class="hover-3-content px-5 py-4">
                             <p class="hover-3-description font-weight-light mb-0" style="font-family: Lora, serif;">Use of colorful particles to show feedback</p>
@@ -57,7 +58,7 @@
                     <p>Strong player feedback was implemented with the use of particles to provide feedback to the player about the gameplay state.&nbsp;<br></p>
                     <p>When enemies are hit or defeated, a unique particle effect is created. The player's weapon emit steam when overheated. Laser hits create sparks.<br></p>
                     <h2 class="section-heading">Integrated UI</h2>
-                    <div class="hover hover-3 text-white rounded"><img alt="image" src="../../assets/img/trojan-2.gif">
+                    <div class="hover hover-3 text-white rounded"><img alt="image" src="../../assets/img/trojan-2.gif?h=4dc55e89a659d8d86e3a3811072ef67a">
                         <div class="hover-overlay"></div>
                         <div class="hover-3-content px-5 py-4">
                             <p class="hover-3-description font-weight-light mb-0" style="font-family: Lora, serif;">Heat gauge and weapon choice integrated into the weapon visually</p>
@@ -66,7 +67,7 @@
                     <p>Integrated UI was implemented with visual cues that are part of the game world and not as a HUD element.<br></p>
                     <p>The heat gauge is on the weapon with a needle indicating the current heat level and an image on the magazine displays the currently selected weapon.<br></p>
                     <h2 class="section-heading">Immediate Access to Information</h2>
-                    <div class="hover hover-3 text-white rounded"><img alt="image" src="../../assets/img/trojan-3.gif">
+                    <div class="hover hover-3 text-white rounded"><img alt="image" src="../../assets/img/trojan-3.gif?h=156e77dbc9c7140e176f011c789d8130">
                         <div class="hover-overlay"></div>
                         <div class="hover-3-content px-5 py-4">
                             <p class="hover-3-description font-weight-light mb-0" style="font-family: Lora, serif;">Health and shield status are immediately available</p>
@@ -87,15 +88,15 @@
                         <li class="list-inline-item"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: rgb(33,37,41);"></i><a href="https://www.linkedin.com/in/janus-quek/"><i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></a></span></li>
                         <li class="list-inline-item"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: rgb(33, 37, 41);"></i><a href="https://github.com/Viverea"><i class="fa fa-github fa-stack-1x fa-inverse"></i></a></span></li>
                     </ul>
-                    <p class="text-muted copyright">Copyright&nbsp;©&nbsp;Janus 2021</p>
+                    <p class="text-muted copyright" style="font-family: 'Open Sans', sans-serif;">Copyright&nbsp;©&nbsp;Janus 2021</p>
                 </div>
             </div>
         </div>
     </footer>
-    <script src="../../assets/js/jquery.min.js"></script>
-    <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/2-columns-media-image-video-carousel-map.js"></script>
-    <script src="../../assets/js/clean-blog.js"></script>
+    <script src="../../assets/js/jquery.min.js?h=89312d34339dcd686309fe284b3f226f"></script>
+    <script src="../../assets/bootstrap/js/bootstrap.min.js?h=ba42258394f86cd7822f0e850e2d60b1"></script>
+    <script src="../../assets/js/2-columns-media-image-video-carousel-map.js?h=bc336573c29dd6cef9a547d30ca17cdf"></script>
+    <script src="../../assets/js/clean-blog.js?h=5c5da44b414001c67a91a5784fe4f011"></script>
 </body>
 
 </html>
