--- a/ux/contact-me/index.html
+++ b/ux/contact-me/index.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Contact me - Janus</title>
-    <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css?h=9e2f2f7964efe8968a80b0bf55661c42">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
-    <link rel="stylesheet" href="../../assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="../../assets/css/2-columns-media-image-video-carousel-map.css">
-    <link rel="stylesheet" href="../../assets/css/Bold-BS4-Image-Caption-Hover-Effect-3.css">
+    <link rel="stylesheet" href="../../assets/fonts/font-awesome.min.css?h=320bd0471c3e8d6b9dd55c98e185506c">
+    <link rel="stylesheet" href="../../assets/css/2-columns-media-image-video-carousel-map.css?h=a4318cd0aa8e0a7ab71867672e4c52e1">
+    <link rel="stylesheet" href="../../assets/css/Bold-BS4-Image-Caption-Hover-Effect-3.css?h=1c5852532269f7f368b453aa7cb1e1ac">
+    <link rel="stylesheet" href="../../assets/css/Video-Responsive.css?h=6b256dd00c3de05273474840195f316a">
 </head>
 
 <body style="background: rgb(0,0,0);color: rgb(255,255,255);">
@@ -29,12 +30,12 @@
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background-image:url('../../assets/img/contact-bg.jpg');">
+    <header class="masthead" style="background: url(&quot;../../assets/img/contact-bg.jpg?h=1683d68fadc4673ed0357866ae18fbab&quot;) center / cover no-repeat;">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto">
-                    <div class="site-heading">
+                    <div class="site-heading" style="padding-top: 100px;padding-bottom: 100px;">
                         <h1>Contact Me</h1><span class="subheading">Have questions? I have answers</span>
                     </div>
                 </div>
@@ -73,15 +74,15 @@
                         <li class="list-inline-item"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: rgb(33,37,41);"></i><a href="https://www.linkedin.com/in/janus-quek/"><i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></a></span></li>
                         <li class="list-inline-item"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: rgb(33, 37, 41);"></i><a href="https://github.com/Viverea"><i class="fa fa-github fa-stack-1x fa-inverse"></i></a></span></li>
                     </ul>
-                    <p class="text-muted copyright">Copyright&nbsp;©&nbsp;Janus 2021</p>
+                    <p class="text-muted copyright" style="font-family: 'Open Sans', sans-serif;">Copyright&nbsp;©&nbsp;Janus 2021</p>
                 </div>
             </div>
         </div>
     </footer>
-    <script src="../../assets/js/jquery.min.js"></script>
-    <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/2-columns-media-image-video-carousel-map.js"></script>
-    <script src="../../assets/js/clean-blog.js"></script>
+    <script src="../../assets/js/jquery.min.js?h=89312d34339dcd686309fe284b3f226f"></script>
+    <script src="../../assets/bootstrap/js/bootstrap.min.js?h=ba42258394f86cd7822f0e850e2d60b1"></script>
+    <script src="../../assets/js/2-columns-media-image-video-carousel-map.js?h=bc336573c29dd6cef9a547d30ca17cdf"></script>
+    <script src="../../assets/js/clean-blog.js?h=5c5da44b414001c67a91a5784fe4f011"></script>
 </body>
 
 </html>
