--- a/ux/index.html
+++ b/ux/index.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Janus</title>
-    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css?h=9e2f2f7964efe8968a80b0bf55661c42">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
-    <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="../assets/css/2-columns-media-image-video-carousel-map.css">
-    <link rel="stylesheet" href="../assets/css/Bold-BS4-Image-Caption-Hover-Effect-3.css">
+    <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css?h=320bd0471c3e8d6b9dd55c98e185506c">
+    <link rel="stylesheet" href="../assets/css/2-columns-media-image-video-carousel-map.css?h=a4318cd0aa8e0a7ab71867672e4c52e1">
+    <link rel="stylesheet" href="../assets/css/Bold-BS4-Image-Caption-Hover-Effect-3.css?h=1c5852532269f7f368b453aa7cb1e1ac">
+    <link rel="stylesheet" href="../assets/css/Video-Responsive.css?h=6b256dd00c3de05273474840195f316a">
 </head>
 
 <body style="background: rgb(0,0,0);">
@@ -29,12 +30,12 @@
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background: url(&quot;../assets/img/laptop.jpg&quot;) bottom / cover;">
+    <header class="masthead" style="background: url(&quot;../assets/img/laptop.jpg?h=683cd8a5377d56bab71ac174f6526c3e&quot;) bottom / cover;">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto">
-                    <div class="site-heading">
+                    <div class="site-heading" style="padding-top: 100px;padding-bottom: 100px;">
                         <h1>I BUILD TOOLS</h1><span class="subheading">Janus Quek, API developer</span>
                     </div>
                 </div>
@@ -48,9 +49,9 @@
                 <div class="col-md-6 column-media"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/LMlCN6_vUvs?autoplay=1&amp;mute=1" width="560" height="315" style="height: 555;border-right-style: solid;"></iframe></div>
                 <div class="col-md-6 text-center column-text" style="border-left: 5px solid rgb(255,255,255) ;">
                     <h2 class="text-left" style="color: rgb(255,255,255);">Beta Engine</h2>
-                    <p class="text-left" style="color: rgb(255,255,255);">An engine made for a Year 1 game project.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);">The editor's interface and various functionalities are focused on building the game rapidly.<br><br>I developed some non-typical features here such as a robust animation editor, prefab tiler, and a dialogue editor.<br></p>
-                    <p class="text-left" style="color: rgb(255,255,255);">This project does not have a landing page yet.</p><button class="btn btn-secondary" type="button"><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">An engine made for a Year 1 game project.</p>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">The editor's interface and various functionalities are focused on building the game rapidly.<br><br>I developed some non-typical features here such as a robust animation editor, prefab tiler, and a dialogue editor.<br></p>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">This project does not have a landing page yet.</p><button class="btn btn-secondary" type="button"><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
                 </div>
             </div>
         </div>
@@ -61,9 +62,9 @@
                 <div class="col-md-6 column-media"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/LMlCN6_vUvs?autoplay=1&amp;mute=1" width="560" height="315" style="height: 555;border-right-style: solid;"></iframe></div>
                 <div class="col-md-6 text-center column-text" style="border-left: 5px solid rgb(255,255,255) ;">
                     <h2 class="text-left" style="color: rgb(255,255,255);">Forge Engine</h2>
-                    <p class="text-left" style="color: rgb(255,255,255);">An engine made for a Year 2 &amp; 3 game project.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);">The editor's interface and various functionalities are focused on future-proofing and extendibility.<br><br>I implemented many features with an API for other users such as C# scripting integration, flexible file I/O, and prefab technology.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);">This project is still WIP as of Milestone 1.</p><button class="btn btn-primary" type="button"><a href="/ux/forge-engine" style="color: rgb(255,255,255);">SEE MORE</a></button>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">An engine made for a Year 2 &amp; 3 game project.</p>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">The editor's interface and various functionalities are focused on future-proofing and extendibility.<br><br>I implemented many features with an API for other users such as C# scripting integration, flexible file I/O, and prefab technology.</p>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">This project is still WIP as of Milestone 1.</p><button class="btn btn-primary" type="button"><a href="/ux/forge-engine" style="color: rgb(255,255,255);">SEE MORE</a></button>
                 </div>
             </div>
         </div>
@@ -74,9 +75,9 @@
                 <div class="col-md-6 column-media"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/LMlCN6_vUvs?autoplay=1&amp;mute=1" width="560" height="315" style="height: 555;border-right-style: solid;"></iframe></div>
                 <div class="col-md-6 text-center column-text" style="border-left: 5px solid rgb(255,255,255) ;">
                     <h2 class="text-left" style="color: rgb(255,255,255);">Others</h2>
-                    <p class="text-left" style="color: rgb(255,255,255);">A bunch of other plug and play APIs such as Unity helper scripts and C++ containers.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);">Some of these include a card builder and a lockless hashmap.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);">This project does not have a landing page yet.</p><button class="btn btn-secondary" type="button"><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">A bunch of other plug and play APIs such as Unity helper scripts and C++ containers.</p>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Some of these include a card builder and a lockless hashmap.</p>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">This project does not have a landing page yet.</p><button class="btn btn-secondary" type="button"><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
                 </div>
             </div>
         </div>
@@ -87,9 +88,9 @@
                 <div class="col-md-6 column-media"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/LMlCN6_vUvs?autoplay=1&amp;mute=1" width="560" height="315" style="height: 555;border-right-style: solid;"></iframe></div>
                 <div class="col-md-6 text-center column-text" style="border-left: 5px solid rgb(255,255,255) ;">
                     <h2 class="text-left" style="color: rgb(255,255,255);">Trojan</h2>
-                    <p class="text-left" style="color: rgb(255,255,255);">A game made in Unity for a tertiary year project.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);">Trojan is a rail-shooter game, where an anti-virus program has to rid the PC of viruses.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);">This project is what will be used to showcase layout and content for Milestone 1.</p><button class="btn btn-primary" type="button"><a href="/ux/trojan" style="color: rgb(255,255,255);">SEE MORE</a></button>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">A game made in Unity for a tertiary year project.</p>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Trojan is a rail-shooter game, where an anti-virus program has to rid the PC of viruses.</p>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">This project is what will be used to showcase layout and content for Milestone 1.</p><button class="btn btn-primary" type="button"><a href="/ux/trojan" style="color: rgb(255,255,255);">SEE MORE</a></button>
                 </div>
             </div>
         </div>
@@ -102,15 +103,15 @@
                         <li class="list-inline-item"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: rgb(33,37,41);"></i><a href="https://www.linkedin.com/in/janus-quek/"><i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></a></span></li>
                         <li class="list-inline-item"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: rgb(33, 37, 41);"></i><a href="https://github.com/Viverea"><i class="fa fa-github fa-stack-1x fa-inverse"></i></a></span></li>
                     </ul>
-                    <p class="text-muted copyright">Copyright&nbsp;©&nbsp;Janus 2021</p>
+                    <p class="text-muted copyright" style="font-family: 'Open Sans', sans-serif;">Copyright&nbsp;©&nbsp;Janus 2021</p>
                 </div>
             </div>
         </div>
     </footer>
-    <script src="../assets/js/jquery.min.js"></script>
-    <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../assets/js/2-columns-media-image-video-carousel-map.js"></script>
-    <script src="../assets/js/clean-blog.js"></script>
+    <script src="../assets/js/jquery.min.js?h=89312d34339dcd686309fe284b3f226f"></script>
+    <script src="../assets/bootstrap/js/bootstrap.min.js?h=ba42258394f86cd7822f0e850e2d60b1"></script>
+    <script src="../assets/js/2-columns-media-image-video-carousel-map.js?h=bc336573c29dd6cef9a547d30ca17cdf"></script>
+    <script src="../assets/js/clean-blog.js?h=5c5da44b414001c67a91a5784fe4f011"></script>
 </body>
 
 </html>
